# noiad

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.core  Dockerfile.relay  Justfile  LICENSE  README.adoc  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: tests.yml
core/: Cargo.toml
core/src/: cli.rs  config.rs  dataflow.rs  errors.rs  event.rs  lib.rs  main.rs  server.rs  state.rs  types.rs  worker.rs
core/src/algorithms/: k_core.rs  mod.rs  pagerank.rs  trusted_assertions.rs  trusted_assertions_event.rs  trusted_lists.rs
core/src/operators/: builder_async.rs  mod.rs  probe.rs  top_k.rs
core/src/query/: filter.rs  mod.rs  trace_iter.rs
core/src/sinks/: dataset_sink.rs  event_sink.rs  mod.rs  pagerank_sink.rs  persist_sink.rs  trusted_assertions_sink.rs
core/src/sources/: mod.rs  model_import_source.rs
core/src/sources/persist/: mod.rs  persist_source.rs
core/src/sources/postgres/: connection.rs  mod.rs  parser.rs  replication.rs  snapshot.rs  utils.rs
graphey/: Cargo.toml
graphey/src/: main.rs
nostr-surrealdb/: Cargo.toml  README.adoc
nostr-surrealdb/src/: lib.rs
nostr-surrealdb/src/store/: db.rs  error.rs  mod.rs  model.rs
nostrpg/: Cargo.toml
nostrpg/migrations/: 20251005173602_build_db.sql
nostrpg/src/: lib.rs
nostrpg/src/store/: db.rs  model.rs
persist/: Cargo.toml
persist/src/: db.rs  edges.rs  event.rs  helpers.rs  interner.rs  iter.rs  lib.rs  query.rs  schema.rs  tag.rs
relay/: Cargo.toml
relay/src/: database.rs  main.rs
search/: Cargo.toml
search/scripts/: loader.py
search/src/: lib.rs  profile.rs  query.rs
transport/: Cargo.toml
transport/src/: connection.rs  lib.rs  server.rs  socket.rs
types/: Cargo.toml
types/src/: edges.rs  embeddings.rs  event.rs  helpers.rs  lib.rs  parquet.rs  tags.rs  trusted_assertions.rs  types.rs
types/src/trusted_assertions/: mod.rs  ta_user.rs
