[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
differential-dataflow = "0.17.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
postgres-replication = { git = "https://github.com/materializeinc/rust-postgres", package = "postgres-replication" }
serde = "1.0.228"
serde_json = "1.0.145"
timely = "0.24.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
tokio-postgres = { git = "https://github.com/materializeinc/rust-postgres" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
tokio-stream = "0.1.17"
