[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
atoi = "2.0.0"
blake3 = "1.8.2"
clap = { version = "4.5.48", features = ["derive"] }
compact_bytes = "0.2.1"
differential-dataflow = "0.18.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
postgres-replication = { git = "https://github.com/materializeinc/rust-postgres", package = "postgres-replication" }
serde = "1.0.228"
serde_json = "1.0.145"
timely = "0.25.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { git = "https://github.com/materializeinc/rust-postgres" }
tokio-stream = { version = "0.1.17", features = ["time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
tokio-stream = "0.1.17"
