[package]
name = "nostr-surrealdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
# nostr-database = { git = 'https://github.com/rust-nostr/nostr.git', package = 'nostr-database' }
nostr-database = { path = '../../rust-nostr/database/nostr-database/', package = 'nostr-database' }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = { version = "2.3.7", features = ["http", "protocol-http", "kv-mem", "kv-rocksdb"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[jobs._]
# other config
on_success = "scroll-to-bottom"
on_failure = "scroll-to-bottom"
