[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
nostr-database = "0.43.0"
nostr-relay-builder = { version = '0.43.0' }
nostr-sdk = { version = '0.43.0' }
nostrpg = { path = "../nostrpg" }
tokio = { version = "1.46.1", features = ["signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
transport = { version = "0.1.0", path = "../transport" }
